<resources>
    <string name="app_name">IntelliCareKotlin</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">David Warner</string>
    <string name="nav_header_subtitle">+64 23252536</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_splash">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="copy_rights">&#169; 2021, IntelliCare Medical Group</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="get_otp">Get OTP</string>
    <string name="enter_otp">Enter OTP sent to </string>
    <string name="resend_otp">Resend OTP</string>
    <string name="change_phone_number">Change Phone Number</string>
    <string name="verify">Verify</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="submit">Submit</string>
    <string name="start">Start</string>
    <string name="ten_nines">9999999999</string>
    <string name="five_zeros">00000</string>
    <string name="random_phone">9876543210</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="select_date_of_birth">Select Date Of Birth</string>
    <string name="dob_mm_dd_yyyy">MM-DD-YYYY</string>
    <string name="email">Email</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="agree_to_intellicare_legal_terms">Agree to IntelliCare Legal Terms</string>
    <string name="agree_to_hipaa_terms">Agree to HIPAA Terms</string>

    <!-- Agora strings -->
    <string name="agora_app_id">a0db729dd13b44e7acffb4e797ac7577</string>
    <string name="agora_access_token">006a0db729dd13b44e7acffb4e797ac7577IAAzzIkFhRMmROuqMpAizpXAqruwlpv3ZrIx0kfqvx68sU82/Q0AAAAAEABID2Uq5D+1XwEAAQDjP7Vf</string>
    <string name="start_visit">Start Visit</string>

    <!--Entries-->
    <string-array name="visit_for_list">
        <item>Self</item>
        <item>Spouse</item>
        <item>Mother</item>
        <item>Father</item>
        <item>Daughter</item>
        <item>Son</item>
        <item>Others</item>
    </string-array>

    <string-array name="complaint_list">
        <item>Select Complaint</item>
        <item>Headache</item>
        <item>Stomach Pain</item>
        <item>Fever</item>
        <item>Cough</item>
        <item>Cold</item>
        <item>Others</item>
    </string-array>
</resources>