<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.registration.OTPVerificationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="@dimen/main_padding"
        android:paddingRight="@dimen/main_padding"
        android:paddingBottom="@dimen/main_padding">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/logo_height"
            android:layout_marginTop="128dp"
            android:background="@drawable/ic_intelli_logo_normal_" />

        <TextView
            android:id="@+id/otpTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/enter_otp"
            android:textColor="@color/primary" />

        <TextView
            android:id="@+id/tvPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textColor="@color/black"
            tools:text="@string/random_phone" />

        <EditText
            android:id="@+id/etOTP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@drawable/edit_bg"
            android:hint="@string/five_zeros"
            android:inputType="number"
            android:maxLength="5"
            android:maxLines="1"
            android:padding="8dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvResendOTP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resend_otp"
                android:textColor="@color/primary_dark"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvChangePhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:gravity="end"
                android:text="@string/change_phone_number"
                android:textColor="@color/primary_dark"
                android:textSize="14sp" />
        </LinearLayout>

        <Button
            android:id="@+id/btnVerifyOTP"
            style="@style/AppTheme.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:enabled="false"
            android:paddingLeft="36dp"
            android:paddingRight="36dp"
            android:text="@string/verify"
            android:textSize="16sp" />
    </LinearLayout>
</ScrollView>