<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.registration.UserVerificationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="@dimen/main_padding"
        android:paddingRight="@dimen/main_padding"
        android:paddingBottom="@dimen/main_padding"
        tools:context=".ui.registration.UserVerificationActivity">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/logo_height"
            android:layout_marginTop="128dp"
            android:background="@drawable/ic_intelli_logo_normal_" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/enter_last_name"
            android:textColor="@color/primary" />

        <EditText
            android:id="@+id/etLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@drawable/edit_bg"
            android:hint="@string/enter_last_name"
            android:inputType="textCapWords"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
            android:maxLength="20"
            android:maxLines="1"
            android:padding="8dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/select_date_of_birth"
            android:textColor="@color/primary" />

        <EditText
            android:id="@+id/etDOB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/edit_bg"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/dob_mm_dd_yyyy"
            android:inputType="none"
            android:maxLength="20"
            android:maxLines="1"
            android:padding="8dp" />

        <Button
            android:id="@+id/btnSubmit"
            style="@style/AppTheme.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:enabled="false"
            android:paddingLeft="36dp"
            android:paddingRight="36dp"
            android:text="@string/submit"
            android:textSize="16sp" />
    </LinearLayout>
</ScrollView>