<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.form.UserFormActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:orientation="vertical"
        android:paddingLeft="@dimen/main_padding"
        android:paddingTop="4dp"
        android:paddingRight="@dimen/main_padding"
        android:paddingBottom="@dimen/main_padding">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/logo_height"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/ic_intelli_logo_normal_" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Member ID"
            android:textColor="@color/primary" />

        <EditText
            android:id="@+id/etMemberId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@drawable/edit_bg"
            android:inputType="textCapCharacters"
            android:maxLength="20"
            android:maxLines="1"
            android:padding="8dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/last_name"
            android:textColor="@color/primary" />

        <EditText
            android:id="@+id/etLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@drawable/edit_bg"
            android:inputType="textCapWords"
            android:maxLength="20"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
            android:maxLines="1"
            android:padding="8dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/email"
            android:textColor="@color/primary" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/edit_bg"
            android:inputType="textEmailAddress"
            android:maxLength="30"
            android:maxLines="1"
            android:padding="8dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Mobile Phone"
            android:textColor="@color/primary" />

        <EditText
            android:id="@+id/etMobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/edit_bg"
            android:digits="0123456789"
            android:inputType="number"
            android:maxLength="10"
            android:maxLines="1"
            android:padding="8dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Other Notes"
            android:textColor="@color/primary" />

        <EditText
            android:id="@+id/etOtherNotes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/edit_bg"
            android:inputType="text"
            android:maxLength="40"
            android:maxLines="1"
            android:padding="8dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/date_of_birth"
            android:textColor="@color/primary" />

        <EditText
            android:id="@+id/etDOB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/edit_bg"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:inputType="none"
            android:maxLength="10"
            android:maxLines="1"
            android:padding="8dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Membership Card Photo"
            android:textColor="@color/primary" />

        <ImageView
            android:id="@+id/ivMemberCard"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/edit_bg"
            android:padding="20dp"
            android:src="@drawable/ic_camera" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Member Photo"
            android:textColor="@color/primary" />

        <ImageView
            android:id="@+id/ivPatientPhoto"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/edit_bg"
            android:padding="20dp"
            android:src="@drawable/ic_camera" />

        <CheckBox
            android:id="@+id/cbLegalTerms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:buttonTint="@color/primary"
            android:text="@string/agree_to_intellicare_legal_terms"
            android:textColor="@color/primary"
            android:textColorLink="@color/primary" />

        <CheckBox
            android:id="@+id/cbHipaaTerms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:buttonTint="@color/primary"
            android:text="@string/agree_to_hipaa_terms"
            android:textColor="@color/primary"
            android:textColorLink="@color/primary" />

        <Button
            android:id="@+id/btnSubmit"
            style="@style/AppTheme.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:enabled="false"
            android:paddingLeft="36dp"
            android:paddingRight="36dp"
            android:text="@string/submit"
            android:textSize="16sp" />
    </LinearLayout>
</ScrollView>